--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   badges: ^3.1.2
   firebase_messaging: ^15.2.5
   firebase_core: ^3.13.0
+  flutter_local_notifications: ^19.1.0
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
